style(Sidebar): Fixe sidebar and allow overflow on pagecontent

--- a/src/components/sections/Nav/nav.module.scss
+++ b/src/components/sections/Nav/nav.module.scss
@@ -1,6 +1,7 @@
 .sidebar {
   border-right: 1px solid var(--stroke-color);
   width: 201px;
+  height: 100vh;
 
   &__logo {
     margin-top: 32px;
